added links and profile pic CSS

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/josh-nussbaum-3836ab19a/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/joshnussbaum89" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Josh Nussbaum</p>
     </footer>
