--- a/experience.html
+++ b/experience.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Josh Nussbaum</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header class="experience-banner">
       <img src="images/headshot.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
@@ -27,7 +27,7 @@
         <p>I've completed an <em>HTML and CSS</em> course at <a href="https://altcademy.com" target="_blank">Altcademy</a>, and am currently enrolled in the <em>Front End Web Development Tech Degree</em> program at <a href="https://teamtreehouse.com" target="_blank">Treehouse.</a></p>
       </div> 
 
-      <div class="card">
+      <section class="card">
         <h2>Soft Skills</h2>
         <p>My life as a musician has prepared me in a number of ways:</p>
         <ul class="skills">
@@ -39,7 +39,7 @@
           <li>Creative</li>
         </ul>
         <p>I believe artists, such as musicians, dancers or graphic designers, have a unique learning process that pairs well with web development.</p>
-      </div> 
+      </section> 
 
     </main>
     <footer>
