--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Josh Nussbaum</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/main-pic.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
@@ -29,7 +29,7 @@
         <p>I have been a professional musician my entire life.  Creating things is my passion and I look forward to bringing that passion to web development.</p>
       </div> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to feel comfortable writing code and creating using languages such as:</p>
         <ul class="skills">
@@ -41,7 +41,7 @@
           <li>Python</li>
         </ul>
         <p>I would love to work with a team of fun and creative people to build websites and web applications.</p>
-      </div> 
+      </section> 
 
     </main>
     <footer>
