added hobbies.html and more text

--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Josh Nussbaum's Profile</title>
+  <title>Josh Nussbaum's Profile - Hobbies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -17,31 +17,29 @@
         </ul>
     </nav>
 
-    <header>
-      <img src="images/main-pic.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
-      <h1 class="tag name">Hello, I’m Josh.</h1>
-      <p class="tag location">My home is Philadelphia, Pennsylvania.</p>
+    <header class="hobbies-banner">
+      <img src="images/hobbies-pic.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
+      <h1 class="tag name">Hobbies</h1>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who has a passion for learning and growing every day.</p>
-        <p>I have been a professional musician my entire life.  Creating things is my passion and I look forward to bringing that passion to web development.</p>
+        <h2>Music Life</h2>
+        <p>I've devoted most of my life to being a musician. Having played with such artists as Charlie Puth, Jazmine Sullivan and more, I've experienced much of what the music industry has to offer.</p>
+        <p>Predominately, I am a guitarist and songwriter. However, I also play bass, drums and piano. When I'm not on the stage or in the studio, I am teaching private lessons or doing classroom guitar workshops.</p>
       </div> 
 
       <section class="card">
-        <h2>Goals</h2>
-        <p>I want to feel comfortable writing code and creating using languages such as:</p>
+        <h2>Everyday Activities</h2>
+        <p>When I'm not studying coding or playing music, I have many other things to keep me busy:</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
-          <li>Python</li>
+          <li>Yoga</li>
+          <li>Meditation</li>
+          <li>Hiking</li>
+          <li>Reading</li>
+          <li>Cooking</li>
+          <li>My Cat, Jack</li>
         </ul>
-        <p>I would love to work with a team of fun and creative people to build websites and web applications.</p>
       </section> 
 
     </main>
