edited images and text to meet exceeds requirements

--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,7 @@
     </nav>
 
     <header class="experience-banner">
-      <img src="images/headshot.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
+      <img src="images/profile-img-2.jpg" alt="leaf with white background" class="profile-image">
       <h1 class="tag name">Experience</h1>
     </header>
 
