--- a/hobbies.html
+++ b/hobbies.html
@@ -18,7 +18,7 @@
     </nav>
 
     <header class="hobbies-banner">
-      <img src="images/hobbies-pic.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
+      <img src="images/profile-img-3.jpg" alt="cassette tape" class="profile-image">
       <h1 class="tag name">Hobbies</h1>
     </header>
 
@@ -37,7 +37,7 @@
           <li>Meditation</li>
           <li>Hiking</li>
           <li>Reading</li>
-          <li>Cooking</li>
+          <li>Coffee</li>
           <li>My Cat, Jack</li>
         </ul>
       </section> 
