--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
 
     <header>
-      <img src="images/main-pic.jpg" alt="Picture of Josh Nussbaum" class="profile-image">
-      <h1 class="tag name">Hello, I’m Josh.</h1>
-      <p class="tag location">My home is Philadelphia, Pennsylvania.</p>
+      <img src="images/profile-img.jpg" alt="leaf with white background" class="profile-image">
+      <h1 class="tag name">Hello, I’m Josh</h1>
+      <p class="tag location">Philadelphia, Pennsylvania</p>
     </header>
 
     <main class="flex">
