changed another div tag to section tag

--- a/experience.html
+++ b/experience.html
@@ -23,10 +23,10 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Education</h2>
         <p>I've completed an <em>HTML and CSS</em> course at <a href="https://altcademy.com" target="_blank">Altcademy</a>, and am currently enrolled in the <em>Front End Web Development Tech Degree</em> program at <a href="https://teamtreehouse.com" target="_blank">Treehouse.</a></p>
-      </div> 
+      </section> 
 
       <section class="card">
         <h2>Soft Skills</h2>
