--- a/hobbies.html
+++ b/hobbies.html
@@ -23,11 +23,11 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Music Life</h2>
         <p>I've devoted most of my life to being a musician. Having played with such artists as Charlie Puth, Jazmine Sullivan and more, I've experienced much of what the music industry has to offer.</p>
         <p>Predominately, I am a guitarist and songwriter. However, I also play bass, drums and piano. When I'm not on the stage or in the studio, I am teaching private lessons or doing classroom guitar workshops.</p>
-      </div> 
+      </section> 
 
       <section class="card">
         <h2>Everyday Activities</h2>
