--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who has a passion for learning and growing every day.</p>
         <p>I have been a professional musician my entire life.  Creating things is my passion and I look forward to bringing that passion to web development.</p>
-      </div> 
+      </section> 
 
       <section class="card">
         <h2>Goals</h2>
